feat: magazine CRU